--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -3,8 +3,8 @@ settings:
   commit_msg: "⚡ Update README with the recent activity"
   max_lines: 5
   readme_file: "./README.md"
-  # disabled_events:
-  #   - "comments"
+  disabled_events:
+    - "new_star"
   url_text: "{REPO}{ID}"
   date:
     timezone: "GMT-05:00"
