--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -25,7 +25,7 @@ jobs:
         id: pl
         uses: Rishabh510/Path-lister-action@master
         with:
-          path: "./"
+          path: "./.github/workflows/"
           type: ".yml"
 
       - name: Output results
