--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -25,8 +25,8 @@ jobs:
         id: pl
         uses: Rishabh510/Path-lister-action@master
         with:
-          path: "./.github/workflows/"
-          type: ".yml"
+          path: "./"
+          type: ".md"
 
       - name: Output results
         run: |
