--- a/.github/workflows/types.yml
+++ b/.github/workflows/types.yml
@@ -25,8 +25,8 @@ jobs:
         id: pl
         uses: Rishabh510/Path-lister-action@master
         with:
-          path: "./"
-          type: ".md"
+          path: "."
+          type: ""
 
       - name: Output results
         run: |
